Fixed minor display issues with overflow

--- a/css/style.css
+++ b/css/style.css
@@ -297,7 +297,7 @@ body {
 
 .download-game {
     position: absolute;
-    bottom: 16%;
+    bottom: 18%;
     font-family: dslayer;
     font-size: 8vw;
     color: white;
